# document-arena

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DECISIONS.md  Makefile  README.md  components.json  compose.yaml  eslint.config.mjs  package.json
app/: evidence-regions.ts  globals.css  layout.tsx  local-document-store.ts  local-runner.ts  motion-preference.ts  page.tsx  pdf-options.ts  pdf-thumbnail-pages.ts  run-options.ts  vote-store.ts  workspace-state.ts
components/: mode-toggle.tsx
docs/: ARCHITECTURE.md  CLOUD_RUNNER.md  CONTAINERS.md  CORE_FEATURES.md  EVALUATION.md  PAGES.md  PARSER_LANDSCAPE.md  PIPELINE_COMPONENTS.md  PRODUCT_PLAN.md  REDESIGN.md  RESEARCH_IDEAS.md  STORAGE_AND_RENDERING.md  WORKFLOWS.md
extensions/azure-di/: Dockerfile  LICENSES.md  component.json  options.schema.json  pyproject.toml
extensions/azure-di/adapter/: main.py  webview.py
extensions/azure-di/tests/: test_normalization.py
extensions/mineru-pipeline/: .dockerignore  Dockerfile  LICENSES.md  component.json  options.schema.json  pyproject.toml
extensions/mineru-pipeline/adapter/: main.py
fixtures/: README.md  generate-smoke-pdf.mjs
lib/: motion.ts
tests/: azure-upstream-options.test.mjs  blob-store.test.mjs  connection-settings.test.mjs  dev-environment.test.mjs  document-content.test.mjs  evidence-regions.test.mjs  local-run-history.test.mjs  local-runner-mapping.test.mjs  mineru-upstream-options.test.mjs  opendataloader-adapter-options.test.mjs  opendataloader-normalize.test.mjs  opendataloader-upstream-options.test.mjs  parser-contract-json.test.mjs  (+18 more)
(+62 files in other folders)
