[project]
name = "document-arena-mineru-pipeline"
version = "0.1.0"
description = "Document Arena MinerU Pipeline adapter (oci-batch/v1)"
requires-python = ">=3.11"
dependencies = [
    "mineru[pipeline]==3.4.4",
    "six>=1.17.0",
]

[tool.uv]
# The adapter itself is stdlib-only; this project exists to pin the parser
# dependency tree for the container build.
